/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package armario;

/**
 *
 * @author laura
 */
public class Accesorio extends Vestimenta{
    
    public Accesorio(String estilo, String color) {
        super(estilo, color);
    }
    
}
