/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package armario;

/**
 *
 * @author laura
 */
public interface IGUI {
    String nombreUsuario();
    
}
