@startuml
package Controlador{
interface CaracteristicaPrenda {
    +getEstilo(): String
    +getColor(): String
    +mostrarInfo(): void
}
interface IRopa{
    +planchar(): void
}

abstract class Vestimenta {
    -estilo: String
    -color: String
    +getEstilo(): String
    +getColor(): String
}

class Camiseta {
}

class Pantalon {
}

class Zapatos {
}
class Accesorio{
}
class Armario {
    -camisetas: Vestimenta []
    -pantalones: Vestimenta[]
    -zapatos: Vestimenta[]
    -camisetaSeleccionada: Vestimenta
    -pantalonSeleccionado: Vestimenta
    -zapatosSeleccionados: Vestimenta
    -random: Random
    +seleccionarCamiseta(): void
    +seleccionarPantalon(): void    
    +seleccionarZapatos(): void
    +seleccionarAleatorio(): void
    +mostrarSeleccion(): void
    -mostrarOpciones(): void
    -mostrarVestimenta(): void    
    
}
class Menu {
    -armario: Armario
    -scanner: Scanner
    +mostrarMenu(): void
    +manejarOpcion(): void
}
}
package Vista{
Class GUI {
    - nombre: String
}
interface IGUI{
    + nombreUsuario(): String
}
}
package Modelo {
interface PrendaDB{
    + obtenerCamisetas(): List
    + obtenerPantalones(): List
    + obtenerZapatos(): List
    + obtenerAccesorios(): List
}

class DBFile{
    - RutaDB: String
    - leerPrendasFile(): List
}
}
CaracteristicaPrenda <|.. Vestimenta 
Vestimenta <|-- Camiseta
Vestimenta <|-- Pantalon
Vestimenta <|-- Zapatos
Vestimenta <|-- Accesorio

IRopa <|.. Camiseta
IRopa <|.. Pantalon

Armario --> Menu
Armario *-- Vestimenta 
 
IGUI --> Menu
IGUI <|.. GUI

PrendaDB --> Armario
PrendaDB <|.. DBFile

@enduml